<?xml version="1.0"?>
<package format="3">
  <name>mask_rcnn</name>
  <version>0.0.0</version>
  <description>TODO: mask_rcnn description</description>
  <maintainer email="psh@todo.todo">psh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_opencv</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
